// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component renders with defaults 1`] = `
"<footer id=\\"footer\\" class=\\"c-footer u-dim\\">
  <div class=\\"b-block\\">
    <section class=\\"b-bio\\" role=\\"complementary\\" itemscope=\\"\\" itemType=\\"http://schema.org/Person\\">
      <div class=\\"b-bio__image\\"><img src=\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjwvc3ZnPg==\\" alt=\\"David Bushell\\" data-src=\\"/assets/img/me3@1x.jpg\\" data-srcset=\\"/assets/img/me3@1x.jpg 1x, /assets/img/me3@2x.jpg 2x\\" data-lazy=\\"false\\" /></div>
      <div class=\\"b-bio__main\\">
        <h3 itemProp=\\"name\\"><a href=\\"/about/\\">David Bushell</a></h3>
        <p itemProp=\\"description\\">Based in the UK, near Manchester, I freelance for small businesses, start-ups, individuals, and fellow web agencies — all over the world.</p>
      </div>
    </section><a href=\\"/contact/\\" class=\\"b-hire\\"><img class=\\"b-hire__image\\" src=\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjwvc3ZnPg==\\" alt=\\"Available for Hire\\" data-src=\\"/assets/img/dbushell-for-hire.svg\\" data-lazy=\\"false\\" /></a>
    <aside class=\\"b-blog\\" role=\\"navigation\\">
      <div class=\\"b-blog__title\\">
        <h3>From the blog…</h3>
      </div>
      <ul class=\\"b-blog__list\\">
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/07/03/turn-the-pi-hole-admin-ui-into-a-pwa/\\">Turn the Pi-hole Admin Dashboard into a Progressive Web App</a><time class=\\"time\\" dateTime=\\"2020-07-03T10:00:00.000Z\\">Friday <b>3 <abbr title=\\"July\\">Jul</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/07/02/hardware-home-servers-self-hosted-raspberry-pi/\\">Hardware and Self Hosting</a><time class=\\"time\\" dateTime=\\"2020-07-02T10:00:00.000Z\\">Thursday <b>2 <abbr title=\\"July\\">Jul</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/06/08/pwa-web-crypto-encryption-auto-sign-in-redux-persist/\\">PWA Encryption and Auto Sign-in</a><time class=\\"time\\" dateTime=\\"2020-06-08T10:00:00.000Z\\">Monday <b>8 <abbr title=\\"June\\">Jun</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/06/01/bubblewrap-twa-pwa-apps-android-studio/\\">Bubblewrap Apps in Android Studio</a><time class=\\"time\\" dateTime=\\"2020-06-01T10:00:00.000Z\\">Monday <b>1 <abbr title=\\"June\\">Jun</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/05/08/wordpress-gutenberg-react-acf-example-blocks/\\">WordPress Gutenberg Example Blocks</a><time class=\\"time\\" dateTime=\\"2020-05-08T10:00:00.000Z\\">Friday <b>8 <abbr title=\\"May\\">May</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/04/24/wordpress-gutenberg-react-and-advanced-custom-fields/\\">WordPress Gutenberg: React &amp; Advanced Custom Fields (ACF)</a><time class=\\"time\\" dateTime=\\"2020-04-24T10:00:00.000Z\\">Friday <b>24 <abbr title=\\"April\\">Apr</abbr> 2020</b></time></li>
      </ul>
    </aside>
    <hr />
    <p><small><span>Copyright &copy; 2020 </span><a href=\\"/\\">David Bushell</a><br /><a href=\\"/privacy/\\"><span class=\\"u-dim\\">Privacy Policy</span></a></small></p>
  </div>
</footer>"
`;

exports[`Footer component renders without "for hire" element 1`] = `
"<footer id=\\"footer\\" class=\\"c-footer u-dim\\">
  <div class=\\"b-block\\">
    <section class=\\"b-bio\\" role=\\"complementary\\" itemscope=\\"\\" itemType=\\"http://schema.org/Person\\">
      <div class=\\"b-bio__image\\"><img src=\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjwvc3ZnPg==\\" alt=\\"David Bushell\\" data-src=\\"/assets/img/me3@1x.jpg\\" data-srcset=\\"/assets/img/me3@1x.jpg 1x, /assets/img/me3@2x.jpg 2x\\" data-lazy=\\"false\\" /></div>
      <div class=\\"b-bio__main\\">
        <h3 itemProp=\\"name\\"><a href=\\"/about/\\">David Bushell</a></h3>
        <p itemProp=\\"description\\">Based in the UK, near Manchester, I freelance for small businesses, start-ups, individuals, and fellow web agencies — all over the world.</p>
      </div>
    </section>
    <hr />
    <aside class=\\"b-blog\\" role=\\"navigation\\">
      <div class=\\"b-blog__title\\">
        <h3>From the blog…</h3>
      </div>
      <ul class=\\"b-blog__list\\">
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/07/03/turn-the-pi-hole-admin-ui-into-a-pwa/\\">Turn the Pi-hole Admin Dashboard into a Progressive Web App</a><time class=\\"time\\" dateTime=\\"2020-07-03T10:00:00.000Z\\">Friday <b>3 <abbr title=\\"July\\">Jul</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/07/02/hardware-home-servers-self-hosted-raspberry-pi/\\">Hardware and Self Hosting</a><time class=\\"time\\" dateTime=\\"2020-07-02T10:00:00.000Z\\">Thursday <b>2 <abbr title=\\"July\\">Jul</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/06/08/pwa-web-crypto-encryption-auto-sign-in-redux-persist/\\">PWA Encryption and Auto Sign-in</a><time class=\\"time\\" dateTime=\\"2020-06-08T10:00:00.000Z\\">Monday <b>8 <abbr title=\\"June\\">Jun</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/06/01/bubblewrap-twa-pwa-apps-android-studio/\\">Bubblewrap Apps in Android Studio</a><time class=\\"time\\" dateTime=\\"2020-06-01T10:00:00.000Z\\">Monday <b>1 <abbr title=\\"June\\">Jun</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/05/08/wordpress-gutenberg-react-acf-example-blocks/\\">WordPress Gutenberg Example Blocks</a><time class=\\"time\\" dateTime=\\"2020-05-08T10:00:00.000Z\\">Friday <b>8 <abbr title=\\"May\\">May</abbr> 2020</b></time></li>
        <li class=\\"b-blog__item\\"><a rel=\\"bookmark\\" href=\\"/2020/04/24/wordpress-gutenberg-react-and-advanced-custom-fields/\\">WordPress Gutenberg: React &amp; Advanced Custom Fields (ACF)</a><time class=\\"time\\" dateTime=\\"2020-04-24T10:00:00.000Z\\">Friday <b>24 <abbr title=\\"April\\">Apr</abbr> 2020</b></time></li>
      </ul>
    </aside>
    <hr />
    <p><small><span>Copyright &copy; 2020 </span><a href=\\"/\\">David Bushell</a><br /><a href=\\"/privacy/\\"><span class=\\"u-dim\\">Privacy Policy</span></a></small></p>
  </div>
</footer>"
`;
